--- a/pom.xml
+++ b/pom.xml
@@ -6,19 +6,24 @@
 
     <groupId>se.marell</groupId>
     <artifactId>dcommons</artifactId>
-    <version>0-SNAPSHOT</version>
+    <version>2.0.9-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <name>dcommons</name>
     <description>Scattered generic classes with no other home.</description>
     <url>http://github.com/dmarell/dcommons</url>
 
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>9</version>
+    </parent>
+
     <distributionManagement>
         <repository>
             <id>marell</id>
             <url>http://marell.se/nexus/content/repositories/releases</url>
         </repository>
-
         <snapshotRepository>
             <id>marell-snapshots</id>
             <url>http://marell.se/nexus/content/repositories/snapshots</url>
@@ -57,6 +62,15 @@
     </dependencies>
 
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>2.4.2</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -77,7 +91,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.9.1</version>
+                <version>2.10.3</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
                 </configuration>
@@ -94,7 +108,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>2.2.1</version>
+                <version>2.4</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
